--- a/style-calculator.css
+++ b/style-calculator.css
@@ -36,10 +36,6 @@ body {
     margin-right: auto;
     letter-spacing: 2px; 
   }
-  section.button-containter {
-    margin-top: 20vh;
-    margin-bottom: 20vh; 
-  }
   h1 {
     font-family: 'Rozha One',serif;
     text-align: center;
@@ -71,46 +67,6 @@ body {
     margin-left: 10vh;
     margin-right: 10vh;
     letter-spacing: 2px; 
-  }
-  button.accordion {
-    background-color: #70cf84;
-    color:  #ffffff;
-    cursor: pointer;
-    padding: 18px;
-    margin: 0.75em;
-    border: 0px;
-    border-radius:10px;
-    width: 95%;
-    margin-left:2.5em;
-    margin-top: 3em;
-    text-align: left;
-    outline: none;
-    transition: 0.4s;
-    font-size: 1.5em;
-}
-  
-  .active, .accordion:hover {
-    background-color:#505050;
-    color:white;
-}
-
-.panel {
-  padding: 30px 18px;
-  background-color: #fff;
-  display: none;
-  overflow: hidden;
-}
-
-  button.accordion::after {
-    content: "\002B"; 
-    font-size: 1.5em;
-    float: right;
-    margin-left: 8px;
-  }
-  
-  button.accordion.active::after {
-    content: "\2212"; 
-    color:white!important;
   }
   p{
       margin-left:2.5em;
@@ -305,3 +261,73 @@ body {
       border: 1px solid #ccc;  
     }
   }
+
+/*======================Form========================*/
+.container {
+  background-color: #ffffff;
+  padding: 20px;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 50px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+}
+h1 {
+  text-align: center;
+  margin-top: 0;
+  font-family: 'Lato', sans-serif;
+}
+form {
+  display: flex;
+  flex-direction: column;
+}
+label {
+  margin-top: 10px;
+  font-weight: bold;
+}
+input[type="text1"], input[type="email"], textarea {
+  border: none;
+  border-radius: 3px;
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  font-size: 16px;
+  background-color: #f7f7f7;
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+  resize: none;
+  min-height: 40px;
+  font-family: 'Lato', sans-serif;
+}
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 15px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+  margin-top: 15px;
+}
+input[type="submit"]:hover {
+  background-color: #3e8e41;
+}
+.required:after {
+  content: " *";
+  color: #f00;
+}
+.error {
+  color: #f00;
+  font-size: 14px;
+  margin-top: 5px;
+}
+.success {
+  color: #4CAF50;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+div.form-container {
+  margin: 6em 10em 10em 10em;
+}
