--- a/style-gallery.css
+++ b/style-gallery.css
@@ -528,9 +528,7 @@ nav li a:hover, nav li a.current {
     color: #000000;}
 
 #gallery {
-    float: left;
-    width: 659px;
-    border-right: 1px solid #eeeeee;}
+    width: 659px;}
 
 #image_list {
 	padding-left: 60px;
