--- a/style-gallery.css
+++ b/style-gallery.css
@@ -481,8 +481,13 @@ h1 {
     margin-top: 0;
     font-family: 'Lato', sans-serif;
 }
+section.gallery {
+  margin-top: 10vh; 
+  margin-right:auto; 
+  margin-left:auto;
+}
 
-header, section, aside, nav {
+header, aside, nav {
     display: block;}
 
 .wrapper {
