--- a/style-index.css
+++ b/style-index.css
@@ -643,7 +643,25 @@ background-color: #505050; /* Add a dark-grey background on hover */
     margin-right: 5vw;
   }
 }
-@media (max-width: 800px) {
+@media (min-width: 768px) and (max-width: 1280px) {
+  .flex-item-right, .flex-item-left {
+    flex-direction: column;
+    margin: 0px;
+  }
+  .content_container input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  
+  .content_container input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
+@media (min-width: 375px) and (max-width: 768px) {
   .flex-item-right, .flex-item-left {
     flex-direction: column;
     margin: 0px;
