--- a/style-index.css
+++ b/style-index.css
@@ -674,6 +674,24 @@ background-color: #505050; /* Add a dark-grey background on hover */
     border: 1px solid #ccc;  
   }
 }
+@media only screen and (min-width: 375px) {
+  .flex-item-right, .flex-item-left {
+    flex-direction: column;
+    margin: 0px;
+  }
+  .content_container input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  
+  .content_container input[type=text] {
+    border: 1px solid #ccc;  
+  }
+}
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
   (min-resolution: 1.25dppx),
