--- a/style-index.css
+++ b/style-index.css
@@ -626,6 +626,15 @@ background-color: #505050; /* Add a dark-grey background on hover */
     grid-template-columns: [col1] 1fr [col3] 1fr [col5] 1fr [col7];
     grid-gap: 40px;
   }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
