--- a/style-index.css
+++ b/style-index.css
@@ -199,6 +199,9 @@ a.logo {
   text-transform: uppercase;
   font-size: 16px;
 }
+.topnav .icon {
+  display: none;
+}
 /*======================menubar========================*/
 /* copy all of these to your css file to make sure our menubar look similar*/
 button.learnmore {
