--- a/style-index.css
+++ b/style-index.css
@@ -212,6 +212,15 @@ a.logo {
   text-transform: uppercase;
   font-size: 16px;
 }
+.topnav a {
+  float: left;
+  display: block;
+  color: #505050;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 /*======================menubar========================*/
 /* copy all of these to your css file to make sure our menubar look similar*/
 button.learnmore {
