--- a/style-index.css
+++ b/style-index.css
@@ -212,14 +212,8 @@ a.logo {
   text-transform: uppercase;
   font-size: 16px;
 }
-.topnav a {
-  float: left;
-  display: block;
-  color: #505050;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+.topnav {
+  display: none;
 }
 /*======================menubar========================*/
 /* copy all of these to your css file to make sure our menubar look similar*/
@@ -652,6 +646,29 @@ background-color: #505050; /* Add a dark-grey background on hover */
   
   .content_container input[type=text] {
     border: 1px solid #ccc;  
+  }
+  .topnav {
+    display: block;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
 @media (min-width: 376px) and (max-width: 769px) {
