--- a/style-index.css
+++ b/style-index.css
@@ -631,22 +631,9 @@ background-color: #505050; /* Add a dark-grey background on hover */
   }
 }
 @media (min-width: 768px) and (max-width: 1279px) {
-  .flex-item-right, .flex-item-left {
-    flex-direction: column;
-    margin: 0px;
-  }
-  .content_container input[type=text] {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  
-  .content_container input[type=text] {
-    border: 1px solid #ccc;  
-  }
+  .menubar ul {
+    display: none;
+}
   .topnav {
     display: block;
   }
