--- a/style-index.css
+++ b/style-index.css
@@ -647,6 +647,10 @@ background-color: #505050; /* Add a dark-grey background on hover */
     font-size: 17px;
   }
   .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
