--- a/style-index.css
+++ b/style-index.css
@@ -664,39 +664,69 @@ background-color: #505050; /* Add a dark-grey background on hover */
   }
 }
 @media (min-width: 376px) and (max-width: 769px) {
-  .flex-item-right, .flex-item-left {
-    flex-direction: column;
-    margin: 0px;
+  .menubar ul {
+    display: none;
+}
+  .topnav {
+    display: block;
   }
-  .content_container input[type=text] {
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  
-  .content_container input[type=text] {
-    border: 1px solid #ccc;  
   }
 }
 @media only screen and (min-width: 375px) {
-  .flex-item-right, .flex-item-left {
-    flex-direction: column;
-    margin: 0px;
+  .menubar ul {
+    display: none;
+}
+  .topnav {
+    display: block;
   }
-  .content_container input[type=text] {
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  
-  .content_container input[type=text] {
-    border: 1px solid #ccc;  
   }
 }
 @media print,
