--- a/style-index.css
+++ b/style-index.css
@@ -633,7 +633,7 @@ background-color: #505050; /* Add a dark-grey background on hover */
 @media (min-width: 768px) and (max-width: 1279px) {
   .menubar ul {
     display: none;
-}
+  }
   .topnav {
     display: block;
   }
@@ -674,12 +674,12 @@ background-color: #505050; /* Add a dark-grey background on hover */
   div.content_item {
     margin-top: 5vh;
     margin-bottom: 5vh;
-}
+  }
 }
 @media (min-width: 376px) and (max-width: 767px) {
   .menubar ul {
     display: none;
-}
+  }
   .topnav {
     display: block;
   }
@@ -707,6 +707,19 @@ background-color: #505050; /* Add a dark-grey background on hover */
     float: none;
     display: block;
     text-align: left;
+  }
+  .stripe.introduction {
+    background-size: 150%;
+  }
+  .stripe.introduction h1 {
+    font-size: 3.5em;
+  }
+  .stripe.introduction h2 {
+    font-size: 18px;
+  }
+  div.content_item {
+    margin-top: 5vh;
+    margin-bottom: 5vh;
   }
 }
 @media only screen and (max-width: 375px) {
