--- a/style-information.css
+++ b/style-information.css
@@ -78,6 +78,9 @@ body {
 	text-transform: uppercase;
 	font-size: 16px;
   }
+  .topnav {
+	display: none;
+  }
   /*======================menubar========================*/
   /* copy all of these to your css file to make sure our menubar look similar*/
   
@@ -389,73 +392,177 @@ body {
 	background-color: #505050; /* Add a dark-grey background on hover */
 	}
   /* Responsive layout - makes a one column-layout instead of a two-column layout */
-  @media only screen and (min-width: 880px) {
+  @media only screen and (min-width: 1280px) {
 	.stripe {
 	  grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
 	}
-	.content_container.page_grid {
+	.content_container.page_grid.features {
 	  display: grid;
-	  grid-template-columns: [col1] 1fr [col4] 1fr [col7];
+	  grid-template-columns: [col1] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6] 1fr [col7];
 	  grid-gap: 40px;
 	}
-	.content_container.page_grid1 {
+	.content_container.page_grid.contents {
 	  display: grid;
-	  grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
+	  grid-template-columns: [col1] 1fr [col3] 1fr [col5] 1fr [col7];
 	  grid-gap: 40px;
-	}
-	.content_container.page_grid2 {
-	  display: grid;
-	  grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
-	  grid-gap: 40px;
-	  margin-top: 40px;
-	}
-	.content_container.page_grid3 {
-	  display: grid;
-	  grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
-	  grid-gap: 40px;
-	  margin-top: 40px;
-	}
-	.footer {
-	  padding-top: 40px;
-	  padding-bottom: 20px;
-	  background-color: #000000;
-	  display: grid;
-	  grid-template-columns: [col1] 1fr [col7];
-	  grid-gap: 0px;
-	}
-	.flex-container {
-	  display: flex;
-	  flex-direction: row;
-	}
-	
-	.flex-item-left {
-	  padding: 0px;
-	  flex: 50%;
-	  margin-left: 5vw;
-	}
-	
-	.flex-item-right {
-	  padding: 0px;
-	  flex: 50%;
-	  margin-right: 5vw;
 	}
   }
-  @media (max-width: 800px) {
-	.flex-item-right, .flex-item-left {
-	  flex-direction: column;
-	  margin: 0px;
+  @media (min-width: 768px) and (max-width: 1279px) {
+	.menubar ul {
+	  display: none;
 	}
-	.content_container input[type=text] {
+	.topnav {
+	  display: block;
+	}
+	.topnav a {
+	  float: left;
+	  display: block;
+	  color: #505050;
+	  text-align: center;
+	  padding: 14px 16px;
+	  text-decoration: none;
+	  font-size: 17px;
+	}
+	.topnav a:not(:first-child) {display: none;}
+	.topnav a.icon {
+	  float: right;
+	  display: block;
+	}
+	.topnav.responsive {position: relative;}
+	.topnav.responsive .icon {
+	  position: absolute;
+	  right: 0;
+	  top: 0;
+	}
+	.topnav.responsive a {
 	  float: none;
 	  display: block;
 	  text-align: left;
-	  width: 100%;
-	  margin: 0;
-	  padding: 14px;
 	}
-	
-	.content_container input[type=text] {
-	  border: 1px solid #ccc;  
+	.stripe.introduction {
+	  background-size: 150%;
+	}
+	.stripe.introduction h1 {
+	  font-size: 3.5em;
+	}
+	.stripe.introduction h2 {
+	  font-size: 18px;
+	}
+	div.content_item {
+	  margin-top: 5vh;
+	  margin-bottom: 5vh;
+	}
+  }
+  @media (min-width: 375px) and (max-width: 767px) {
+	.menubar ul {
+	  display: none;
+	}
+	.topnav {
+	  display: block;
+	}
+	.topnav a {
+	  float: left;
+	  display: block;
+	  color: #505050;
+	  text-align: center;
+	  padding: 14px 16px;
+	  text-decoration: none;
+	  font-size: 17px;
+	}
+	.topnav a:not(:first-child) {display: none;}
+	.topnav a.icon {
+	  float: right;
+	  display: block;
+	}
+	.topnav.responsive {position: relative;}
+	.topnav.responsive .icon {
+	  position: absolute;
+	  right: 0;
+	  top: 0;
+	}
+	.topnav.responsive a {
+	  float: none;
+	  display: block;
+	  text-align: left;
+	}
+	.stripe.introduction {
+	  background-size: 300%;
+	}
+	.stripe.introduction h1 {
+	  font-size: 2em;
+	  margin-top: 20vh;
+	}
+	.stripe.introduction h2 {
+	  font-size: 16px;
+	}
+	p.intro_text {
+	  font-size: 14px;
+	}
+	p.overall {
+	  font-size: 1em;
+	}
+	p.overallblockquote {
+	  font-size: 1em;
+	}
+	div.content_item {
+	  margin-top: 5vh;
+	  margin-bottom: 5vh;
+	}
+  }
+  @media only screen and (max-width: 374px) {
+	.menubar ul {
+	  display: none;
+	}
+	.topnav {
+	  display: block;
+	}
+	.topnav a {
+	  float: left;
+	  display: block;
+	  color: #505050;
+	  text-align: center;
+	  padding: 14px 16px;
+	  text-decoration: none;
+	  font-size: 17px;
+	}
+	.topnav a:not(:first-child) {display: none;}
+	.topnav a.icon {
+	  float: right;
+	  display: block;
+	}
+	.topnav.responsive {position: relative;}
+	.topnav.responsive .icon {
+	  position: absolute;
+	  right: 0;
+	  top: 0;
+	}
+	.topnav.responsive a {
+	  float: none;
+	  display: block;
+	  text-align: left;
+	}
+	.stripe.introduction {
+	  background-size: 300%;
+	}
+	.stripe.introduction h1 {
+	  font-size: 2em;
+	  margin-top: 20vh;
+	}
+	.stripe.introduction h2 {
+	  font-size: 16px;
+	}
+	p.intro_text {
+	  font-size: 14px;
+	}
+	p.overall {
+	  font-size: 1em;
+	}
+	p.overallblockquote {
+	  font-size: 1em;
+	}
+	div.content_item {
+	  margin-top: 5vh;
+	  margin-bottom: 5vh;
 	}
   }
   @media print,
