--- a/style-index.css
+++ b/style-index.css
@@ -659,7 +659,7 @@ background-color: #505050; /* Add a dark-grey background on hover */
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon1 {
     position: absolute;
-    right: 0;
+    right: 7vw;
     top: 0;
   }
   .topnav.responsive .icon2 {
