--- a/style-index.css
+++ b/style-index.css
@@ -768,12 +768,21 @@ background-color: #505050; /* Add a dark-grey background on hover */
     font-size: 17px;
   }
   .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
+  .topnav a.icon1 {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon2 {
     float: right;
     display: block;
   }
   .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .topnav.responsive .icon1 {
+    position: absolute;
+    right: 12vw;
+    top: 0;
+  }
+  .topnav.responsive .icon2 {
     position: absolute;
     right: 0;
     top: 0;
