--- a/style-information.css
+++ b/style-information.css
@@ -465,10 +465,9 @@ body {
 	}
 	.stripe.introduction h2 {
 	  font-size: 18px;
-	}
-	div.content_item {
 	  margin-top: 5vh;
-	  margin-bottom: 5vh;
+	  margin-left: 5vw;
+	  margin-right: 5vw;
 	}
   }
   @media (min-width: 375px) and (max-width: 767px) {
