--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -80,12 +80,13 @@ body {
     color:  #ffffff;
     cursor: pointer;
     padding: 18px;
-    margin: 0.75em;
     border: 0px;
     border-radius:10px;
     width: 95%;
-    margin-left:2.5em;
-    margin-top: 3em;
+    margin-left: 0vw;
+    margin-right: 0vw;
+    margin-top: 5vh;
+    margin-bottom: 0vh;
     text-align: left;
     outline: none;
     transition: 0.4s;
