--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -67,7 +67,7 @@ body {
 }
 
 .panel {
-  padding: 30px 18px;
+  padding: 30px 0px;
   background-color: #fff;
   display: none;
   overflow: hidden;
@@ -85,7 +85,7 @@ body {
     color:white!important;
   }
   .stripe.fact p {
-    margin-left:2.5em;
+    margin-left: 0vw;
       text-align: left;
       font-size: 1.5em;
   }
