--- a/style-FAQ.css
+++ b/style-FAQ.css
@@ -352,8 +352,9 @@ body {
       margin-right: 5vw;
     }
     button.accordion {
-      padding: 2%;
+      padding: 5%;
       font-size: 1.25em;
+      margin-top: 5vh;
   }
     }
     @media only screen and (max-width: 374px) {
