--- a/style-calculator.css
+++ b/style-calculator.css
@@ -148,6 +148,9 @@ body {
     text-transform: uppercase;
     font-size: 16px;
   }
+  .topnav {
+    display: none;
+    }
   /*======================menubar========================*/
   /*======================footer========================*/
   div.footer1 {
