--- a/faq.css
+++ b/faq.css
@@ -39,9 +39,9 @@ body {
   .topnav {
     display: none;
     }
-  section.button-containter {
-    margin-top: 0vh;
-    margin-bottom: 20vh; 
+  .button-containter {
+    margin-top: 0vh !important;
+    margin-bottom: 20vh !important; 
   }
   h3.accordion {
     background-color: #70cf84 !important;
