--- a/faq.css
+++ b/faq.css
@@ -420,7 +420,7 @@ p.logoend {
     margin-right: 5vw;
   }
   .stripe.fact p {
-    font-size: 1em;
+    font-size: 1.25em;
   }
 }
 @media (min-width: 375px) and (max-width: 767px) {
@@ -486,6 +486,9 @@ p.logoend {
     font-size: 1.25em !important;
     margin-top: 5vh !important;
   }
+  .stripe.fact p {
+    font-size: 1.25em;
+  }
 }
 @media only screen and (max-width: 374px) {
   .menubar ul {
@@ -549,5 +552,8 @@ p.logoend {
     padding: 5% !important;
     font-size: 1.25em !important;
     margin-top: 5vh !important;
+  }
+  .stripe.fact p {
+    font-size: 1.25em;
   }
 }
