--- a/information.css
+++ b/information.css
@@ -541,6 +541,9 @@ p.logoend {
     margin-left: 5vw;
     margin-right: 5vw;
   }
+  .text {
+    font: 12px "Lato", sans-serif;
+  }
 }
 @media only screen and (max-width: 374px) {
   .menubar ul {
@@ -599,6 +602,9 @@ p.logoend {
     margin-top: 5vh;
     margin-left: 5vw;
     margin-right: 5vw;
+  }
+  .text {
+    font: 12px "Lato", sans-serif;
   }
 }
 @media print,
